Smooth brush freezes on highpoly mesh #69580

Closed
opened 2019-09-06 09:54:47 +02:00 by Igor · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Radeon RX 560 Series ATI Technologies Inc. 4.5.13558 Core Profile Context 26.20.11015.5009

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: 2.79

Short description of error
Smooth brush freezes on highpoly mesh

Exact steps for others to reproduce the error
Smooth brush freezes in sculpting mode when working with models from 4...8 million triangles. The lag happens at the beginning of the use of the brush for a few seconds, then the brush is working fine. In the version 2.79 brush works fine with any number of polygons.
Addition: In version 2.79, this problem is also there, but only when you first use the brush, all subsequent times there is no freezing. Probably, the more powerful the computer, the more polygons it takes for this problem to make itself felt.
[Based on the default startup or an attached .blend file (as simple as possible)]Bug_smooth_brush_test.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Radeon RX 560 Series ATI Technologies Inc. 4.5.13558 Core Profile Context 26.20.11015.5009 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: 2.79 **Short description of error** Smooth brush freezes on highpoly mesh **Exact steps for others to reproduce the error** Smooth brush freezes in sculpting mode when working with models from 4...8 million triangles. The lag happens at the beginning of the use of the brush for a few seconds, then the brush is working fine. In the version 2.79 brush works fine with any number of polygons. Addition: In version 2.79, this problem is also there, but only when you first use the brush, all subsequent times there is no freezing. Probably, the more powerful the computer, the more polygons it takes for this problem to make itself felt. [Based on the default startup or an attached .blend file (as simple as possible)][Bug_smooth_brush_test.blend](https://archive.blender.org/developer/F7753322/Bug_smooth_brush_test.blend)
Author

Added subscriber: @unumex-4

Added subscriber: @unumex-4
Igor changed title from Fix Smooth Brush to Smooth brush freezes on highpoly mesh 2019-09-16 04:25:43 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

We require an example .blend file that works fast in 2.79 but is slow in 2.80.

We require an example .blend file that works fast in 2.79 but is slow in 2.80.

This issue was referenced by a1318d2415

This issue was referenced by a1318d241553246c266410eb1ae4ba23e73179e1
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Pablo Dobarro self-assigned this 2019-09-18 17:51:35 +02:00
Member

Should be fixed in a1318d2415

Should be fixed in a1318d2415
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69580
No description provided.