Fix T69580: Smooth brush freezes on highpoly mesh

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D5831